--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
     </style>
 </head>
 <body class="text-gray-800">
-
     <div id="loadingOverlay" class="fixed inset-0 modal-bg z-50 hidden flex flex-col justify-center items-center">
         <div class="bg-white p-6 rounded-2xl shadow-xl flex flex-col items-center">
             <div class="loader mb-4"></div>
             <p class="text-gray-600 font-medium">데이터를 안전하게 저장 중입니다...</p>
         </div>
     </div>
-
     <div id="warningModal" class="fixed inset-0 modal-bg z-40 hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-2xl p-8 max-w-sm w-full card-shadow transform transition-all scale-100">
             <div class="text-center">
@@ -43,7 +41,6 @@
             </div>
         </div>
     </div>
-
     <div id="successModal" class="fixed inset-0 modal-bg z-50 hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-2xl p-8 max-w-sm w-full card-shadow transform transition-all scale-100">
             <div class="text-center">
@@ -59,14 +56,13 @@
             </div>
         </div>
     </div>
-
     <div class="min-h-screen py-10 px-4">
         <div class="max-w-xl mx-auto">
-            <div class="bg-white rounded-3xl card-shadow p-8 mb-6 text-center">
-                <img src="https://static.wixstatic.com/media/cd1160_4159e89efaa54c9dbc6eb61c35a0f107~mv2.png" alt="Kornect Logo" class="h-24 mx-auto mb-6 object-contain">
+            <div class="bg-white rounded-3xl card-shadow pt-3 pb-4 px-3 mb-6 text-center">
+                <img src="https://static.wixstatic.com/media/cd1160_4159e89efaa54c9dbc6eb61c35a0f107~mv2.png" alt="Kornect Logo" class="h-60 mx-auto -mb-4 object-contain">
                 <p class="text-gray-500 text-sm leading-relaxed break-keep">
                     해외 체류 중인 한인들의 비즈니스 홍보와 교류를 위한 무료 플랫폼입니다.
-                    <br><span class="text-purple-600 font-medium">현지 법령을 준수하는 비즈니스라면 누구나 환영합니다.</span>
+                    <br><span class="text-purple-600 font-medium">현지 법령을 준수하는 비즈니스(프리랜서)라면 자유롭게 이용하세요.</span>
                 </p>
             </div>
             
@@ -120,7 +116,6 @@
                              </div>
                         </div>
                     </div>
-
                     <div><label class="block text-sm font-bold text-gray-700 mb-2">업종 <span class="text-red-500">*</span></label><input type="text" name="industry" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-purple-500 outline-none" placeholder="예: 한식당, 유학원"></div>
                     <div><label class="block text-sm font-bold text-gray-700 mb-2">대표 서비스 <span class="text-red-500">*</span></label><input type="text" name="mainService" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-purple-500 outline-none" placeholder="예: 김밥, 법인설립"></div>
                     <div>
@@ -138,7 +133,6 @@
                     <div><label class="block text-sm font-bold text-gray-700 mb-2">홈페이지 / SNS</label><input type="url" name="website" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-purple-500 outline-none" placeholder="https://..."></div>
                     <div><label class="block text-sm font-bold text-gray-700 mb-2">카카오톡 ID</label><input type="text" name="kakao" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-purple-500 outline-none"></div>
                 </div>
-
                 <div id="editRequestForm" class="space-y-6 hidden">
                     <h3 class="text-xl font-bold text-gray-800 pb-2 border-b border-gray-100">🔒 소유주 인증 및 요청</h3>
                     <div class="flex bg-gray-100 p-1 rounded-xl">
@@ -157,17 +151,14 @@
                     <div id="modifyDetails"><label class="block text-sm font-bold text-gray-700 mb-2">수정 요청사항 <span class="text-red-500">*</span></label><textarea name="modifyRequest" rows="3" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-xl outline-none focus:ring-2 focus:ring-purple-500" placeholder="변경할 내용을 자세히 적어주세요."></textarea></div>
                     <div id="deleteNotice" class="hidden bg-red-50 text-red-700 p-4 rounded-xl text-sm border border-red-100">⚠️ <strong>삭제 요청 안내</strong><br>최종 삭제 전 소유주 확인을 위해 기재하신 연락처로 확인 전화를 드립니다.</div>
                 </div>
-
                 <div class="mt-8"><button type="submit" class="w-full gradient-bg text-white py-4 rounded-xl font-bold text-lg shadow-lg hover:shadow-xl hover:opacity-95 transition transform active:scale-95">제출하기</button></div>
             </form>
         </div>
     </div>
-
     <script>
         // ▼▼▼▼▼▼▼▼▼▼ [중요] 배포된 Google Apps Script Web App URL을 여기에 붙여넣으세요 ▼▼▼▼▼▼▼▼▼▼
         const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz5mMEqjj08UDuEM9ASp-CEfrSysWXMrqVjfwxemPqkZNEgPeYgoyhaK31kq9Yv5Hrb/exec"; 
         // ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲
-
         function initTimeOptions() {
             const hours = Array.from({length: 12}, (_, i) => i + 1);
             const minutes = ['00', '10', '20', '30', '40', '50'];
@@ -228,7 +219,6 @@
             window.open('','_self').close(); window.close();
             setTimeout(() => { document.getElementById('successModal').classList.add('hidden'); location.reload(); }, 500);
         }
-
         // ============================================
         // GitHub Pages용 fetch 통신 (수정된 부분)
         // ============================================
@@ -236,10 +226,8 @@
             e.preventDefault();
             const loading = document.getElementById('loadingOverlay');
             loading.classList.remove('hidden'); loading.classList.add('flex');
-
             const mode = document.querySelector('input[name="mainOption"]:checked').value;
             const formData = { formType: mode };
-
             // 데이터 수집 (생략 없이 모두 수집)
             if (mode === 'new') {
                 formData.businessName = document.querySelector('[name="businessName"]').value;
@@ -257,7 +245,6 @@
                 const cm = document.querySelector('[name="closeMinute"]').value;
                 const cp = document.querySelector('[name="closePeriod"]').value;
                 formData.businessHours = `${oh}:${om} ${op} ~ ${ch}:${cm} ${cp}`;
-
                 const fileInput = document.querySelector('input[name="image"]');
                 if (fileInput.files.length > 0) {
                     const reader = new FileReader();
@@ -281,7 +268,6 @@
                 submitToGAS(formData);
             }
         });
-
         async function submitToGAS(data) {
             try {
                 if (SCRIPT_URL.includes("여기에_복사한_URL")) {
@@ -289,14 +275,12 @@
                     document.getElementById('loadingOverlay').classList.add('hidden');
                     return;
                 }
-
                 // GitHub Pages -> Google Apps Script 통신 (no-cors)
                 await fetch(SCRIPT_URL, {
                     method: 'POST',
                     body: JSON.stringify(data),
                     mode: 'no-cors' 
                 });
-
                 document.getElementById('loadingOverlay').classList.add('hidden');
                 
                 // 성공 모달 표시
@@ -305,15 +289,12 @@
                 msgText.innerText = "접수가 안전하게 처리되었습니다."; 
                 successModal.classList.remove('hidden');
                 successModal.classList.add('flex');
-
                 setTimeout(function() { forceCloseWindow(); }, 3000);
-
             } catch (err) {
                 document.getElementById('loadingOverlay').classList.add('hidden');
                 alert('전송 중 오류가 발생했습니다: ' + err);
             }
         }
-
         initTimeOptions();
         setRequired('new');
     </script>
