--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <div class="bg-white rounded-3xl card-shadow pt-3 pb-4 px-3 mb-6 text-center">
                 <img src="https://static.wixstatic.com/media/cd1160_4159e89efaa54c9dbc6eb61c35a0f107~mv2.png" alt="Kornect Logo" class="h-60 mx-auto -mb-4 object-contain">
                 <p class="text-gray-500 text-sm leading-relaxed break-keep">
-                    해외 체류 중인 한인들의 비즈니스 홍보와 교류를 위한 무료 플랫폼입니다.
-                    <br><span class="text-purple-600 font-medium">현지 법령을 준수하는 비즈니스(프리랜서)라면 자유롭게 이용하세요.</span>
+                    "넓히다, 알리다, 그리고 무료로 누리다."
+                    <br><span class="text-purple-600 font-medium">당신의 비즈니스! 지금 바로 등록하세요.</span>
                 </p>
             </div>
             
