--- a/index.html
+++ b/index.html
@@ -59,17 +59,16 @@
 
     <div class="min-h-screen py-10 px-4">
         <div class="max-w-xl mx-auto">
-            <div class="bg-white rounded-3xl card-shadow pt-3 pb-4 px-3 mb-6 text-center">
-                <img src="https://drive.google.com/thumbnail?id=1FoWG_L4oKEw-FDk6-kO6KY_6E8rU_mig&sz=w1000" alt="Kornect Logo" class="h-36 mx-auto -mb-4 object-contain">
+            <div class="bg-white rounded-3xl card-shadow pt-8 pb-8 px-6 mb-6 text-center">
+                <img src="https://drive.google.com/thumbnail?id=1FoWG_L4oKEw-FDk6-kO6KY_6E8rU_mig&sz=w1000" alt="Kornect Logo" class="h-28 mx-auto object-contain mb-4">
                 <p class="text-gray-500 text-sm leading-relaxed break-keep">
                     "넓히다, 알리다, 그리고 무료로 누리다."
                     <br><span class="text-purple-600 font-medium">당신의 비즈니스! 지금 바로 등록하세요.</span>
                 </p>
             </div>
             
-            <div class="bg-indigo-50 border border-indigo-100 rounded-3xl p-6 mb-6 flex flex-col md:flex-row items-center justify-between gap-4 card-shadow">
-                <div class="text-center md:text-left overflow-hidden"> <h3 class="font-bold text-indigo-900 text-lg flex items-center justify-center md:justify-start gap-2">
-                        <span>🚀</span> 업체 홍보용 랜딩페이지 <span class="text-indigo-600">무료 제작</span>
+            <div class="bg-indigo-50 border border-indigo-100 rounded-3xl p-6 mb-6 flex flex-row items-center justify-between gap-4 card-shadow">
+                <div class="text-left overflow-hidden"> <h3 class="font-bold text-indigo-900 text-lg flex items-center justify-start gap-2"> <span>🚀</span> 업체 홍보용 랜딩페이지 <span class="text-indigo-600">무료 제작</span>
                     </h3>
                     <p class="text-indigo-600 text-sm mt-1 font-medium whitespace-nowrap overflow-hidden text-ellipsis">
                         지금 신청하고 비즈니스를 성장시키세요!
@@ -470,4 +469,3 @@
     </script>
 </body>
 </html>
-
