--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@
                 </p>
             </div>
             
-            <div class="bg-indigo-50 border border-indigo-100 rounded-3xl p-6 mb-6 flex flex-row items-center justify-between gap-4 card-shadow">
-                <div class="text-left overflow-hidden"> <h3 class="font-bold text-indigo-900 text-lg flex items-center justify-start gap-2"> <span>🚀</span> 업체 홍보용 랜딩페이지 <span class="text-indigo-600">무료 제작</span>
+            <div class="bg-indigo-50 border border-indigo-100 rounded-3xl p-6 mb-6 flex flex-col md:flex-row items-center md:justify-between gap-4 md:gap-6 card-shadow">
+                <div class="text-center md:text-left overflow-hidden w-full md:w-auto">
+                    <h3 class="font-bold text-indigo-900 text-lg flex items-center justify-center md:justify-start gap-2">
+                        <span>🚀</span> 업체 홍보용 랜딩페이지 <span class="text-indigo-600">무료 제작</span>
                     </h3>
                     <p class="text-indigo-600 text-sm mt-1 font-medium whitespace-nowrap overflow-hidden text-ellipsis">
                         지금 신청하고 비즈니스를 성장시키세요!
                     </p>
                 </div>
-                <a href="https://www.b-ding.com/" target="_blank" class="shrink-0 bg-white text-indigo-600 text-sm font-bold py-2.5 px-5 rounded-xl border border-indigo-200 shadow-sm hover:bg-indigo-100 transition">
+                <a href="https://www.b-ding.com/" target="_blank" class="w-full md:w-auto shrink-0 bg-white text-indigo-600 text-sm font-bold py-3 md:py-2.5 px-5 rounded-xl border border-indigo-200 shadow-sm hover:bg-indigo-100 transition text-center">
                     예시보기 >
                 </a>
             </div>
