--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="bg-indigo-50 border border-indigo-100 rounded-3xl p-6 mb-6 flex flex-col md:flex-row items-center md:justify-between gap-4 md:gap-6 card-shadow">
                 <div class="text-center md:text-left w-full md:w-auto">
                     <h3 class="font-bold text-indigo-900 text-lg break-keep leading-snug">
-                        <span class="mr-1">🚀</span>업체 홍보용 랜딩페이지 <span class="text-indigo-600">무료 제작</span>
+                        <span class="mr-1">🚀</span>홍보용 랜딩페이지 <span class="text-indigo-600">무료 제작</span>
                     </h3>
                     <p class="text-indigo-600 text-sm mt-2 font-medium break-keep leading-snug">
                         지금 신청하고 비즈니스를 성장시키세요!
@@ -473,3 +473,4 @@
     </script>
 </body>
 </html>
+
