--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         지금 신청하고 비즈니스를 성장시키세요!
                     </p>
                 </div>
-                <a href="https://www.b-ding.com/" target="_blank" class="w-full md:w-auto shrink-0 bg-white text-indigo-600 text-sm font-bold py-3 md:py-2.5 px-5 rounded-xl border border-indigo-200 shadow-sm hover:bg-indigo-100 transition text-center">
+                <a href="https://littlespoon-kornect.netlify.app/" target="_blank" class="w-full md:w-auto shrink-0 bg-white text-indigo-600 text-sm font-bold py-3 md:py-2.5 px-5 rounded-xl border border-indigo-200 shadow-sm hover:bg-indigo-100 transition text-center">
                     예시보기 >
                 </a>
             </div>
@@ -473,4 +473,5 @@
     </script>
 </body>
 </html>
+
 
